--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,12 +36,10 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<h2 id="projects">Mes Projets</h2>
+	
 		<div class="gallery">
-			<figure class="gallery_item">
-				<!-- <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption> -->
-			</figure>
+			
 
 		</div>
 	</section>
