--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -7,18 +7,34 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./assets/style.css">
+    <script src="./login.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>Log In</h1>
-    <form action="" method="post" class="form">
-<label for="email">E-mail</label>
-<input type="email">
-<label for="password">Mot de passe</label>
-<input type="password">
-        <button>Se connecter</button>
-        <p>Mot de passe oublié</p>
-    </form>
+    <header>
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <nav>
+            <ul>
+                <li>projets</li>
+                <li>contact</li>
+                <li>login</li>
+                <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main_login">
+        <h1 class="login_title">Log In</h1>
+        <form  method="post" class="form" id="form">
+            <label for="email" class="login_text">E-mail</label>
+            <input type="email" class="login_input" id="email" name="email">
+            <label for="current-password" class="login_text">Mot de passe</label>
+            <input type="current-password" class="login_input" id="current-password" name="current-password">
+            <button class="login_button">Se connecter</button>
+            <a class="login_link">Mot de passe oublié</a>
+        </form>
+    </main>
+    
+
 </body>
 </html>
