try/catch and error gestion

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -25,6 +25,7 @@
     </header>
     <main class="main_login">
         <h1 class="login_title">Log In</h1>
+        <p class="login_error_msg" hidden>Vueuillez renseigner un Email et/ou Mot de passe valide</p>
         <form  method="post" class="login_form" id="form">
             <label for="email" class="login_text">E-mail</label>
             <input type="email" class="login_input" id="email" name="email" autocomplete="email">
