--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,7 +36,13 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2 id="projects">Mes Projets</h2>
+		<h2 id="projects">Mes Projets<a href="#modal" class="modal_button"> <i class="fa-solid fa-arrow-up-right-from-square"></i> modifier</a></h2>
+		<aside id="modal" hidden>
+			<div class="modal_box">
+				<i class="fa-solid fa-xmark modal_close"></i>
+			</div>
+		</aside>
+		
 	
 		<div class="gallery">
 			
@@ -65,5 +71,9 @@
 		</ul>
 	</nav>
 </footer>
+<script
+src="https://kit.fontawesome.com/2ae47fc565.js"
+crossorigin="anonymous"
+></script>
 </body>
 </html>
