--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li class="login">login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -42,13 +42,10 @@
 				<i class="fa-solid fa-xmark modal_close"></i>
 				<h2 class="modal_title"></h2>
 				<div class="modal_works"></div>
+				<button class="modal_submit">Ajouter une photo</button>
 			</div>
 		</aside>
-		
-	
 		<div class="gallery">
-			
-
 		</div>
 	</section>
 	<section id="contact">
