--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>projets</li>
                 <li>contact</li>
-                <li id="lala">login</li>
+                <li class="login">login</li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
