--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,11 +37,12 @@
 	</section>
 	<section id="portfolio">
 		<h2 id="projects">Mes Projets<a href="#modal" class="modal_button"> <i class="fa-solid fa-arrow-up-right-from-square"></i> modifier</a></h2>
-		<aside id="modal" style="display: none;">
+		<aside id="modal" >
 			<div class="modal_box">
 				<i class="fa-solid fa-xmark modal_close"></i>
 				<h2 class="modal_title"></h2>
-				<div class="modal_works"></div>
+				<div class="modal_works">
+				</div>
 				<button class="modal_submit">Ajouter une photo</button>
 			</div>
 		</aside>
