begin post works

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,7 +37,7 @@
 	</section>
 	<section id="portfolio">
 		<h2 id="projects">Mes Projets<a href="#modal" class="modal_button"> <i class="fa-solid fa-arrow-up-right-from-square"></i> modifier</a></h2>
-		<aside id="modal" >
+		<aside id="modal" style="display: none;">
 			<div class="modal_box">
 				<i class="fa-solid fa-xmark modal_close"></i>
 				<h2 class="modal_title"></h2>
